added first file

--- a/addf1.html
+++ b/addf1.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>first time using gitbash in my laptop.</p>
+    <p>first time using gitbash.</p>
 </body>
 </html>
